# proflow

./: .gitignore  Cargo.toml  README.md  TODO.md
data/: test.proplaylist
data/examples/propresenter/: Titus 2v11-13 (NRSVue).pro  Tom Nametag.pro  [Hymn] Amazing Grace.pro
data/templates/: __template_info__.pro  __template_scripture__.pro  __template_song__.pro
src/: app.rs  config.rs  constants.rs  error.rs  input.rs  item_state.rs  lib.rs  main.rs  types.rs
src/bible/: mod.rs
src/generators/: analyze_presentations.rs  create_amazing_grace_exact.rs  dump_presentation.rs
src/hymnal/: mod.rs
src/lyrics/: mod.rs
src/planning_center/: api.rs  mod.rs  types.rs
src/propresenter/: builder.rs  convert.rs  data_model.rs  deserialize.rs  export.rs  extract.rs  mod.rs  parser.rs  playlist.rs  rtf.rs  serialize.rs  template.rs  uuid.rs
src/propresenter/analyze/: mod.rs
src/propresenter/proto/: action.proto  alignmentGuide.proto  alphaType.proto  analyticsApi.proto  analyticsCreate.proto  analyticsEdit.proto  analyticsEvent.proto  analyticsImport.proto  analyticsMediaManagement.proto  analyticsMultiTracks.proto  analyticsPlaybackMarker.proto  analyticsProContent.proto  analyticsStartup.proto  analyticsSync.proto  analyticsTimecode.proto  analyticsTimeline.proto  analyticsTrackedEvents.proto  analyticsTrigger.proto  analyticsTriggerCue.proto  analyticsTriggerMedia.proto  analyticsUI.proto  applicationInfo.proto  audio.proto  background.proto  ccli.proto  clearGroups.proto  collectionElementType.proto  color.proto  cue.proto  digitalAudio.proto  effects.proto  fileProperties.proto  font.proto  graphicsData.proto  groups.proto  hotKey.proto  input.proto  intRange.proto  labels.proto  layers.proto  (+34 more)
src/services/: editor.rs  mod.rs  playlist.rs  scripture.rs  search.rs
src/ui/: editor.rs  item_list.rs  mod.rs  service_list.rs
src/utils/: file_matcher.rs  mod.rs
tests/: planning_center_api.rs
