[package]
name = "proflow"
version = "0.1.0"
edition = "2021"

[dependencies]
# TUI dependencies
ratatui = "0.26.1"
crossterm = "0.27.0"
arboard = "3.4.1"

# Lyrics processing
nlprule = "0.6.4"
lazy_static = "1.4.0"

# ProPresenter integration
prost = "0.12"
quick-xml = { version = "0.31.0", features = ["serialize"] }
uuid = { version = "1.7", features = ["v4"] }
regex = "1.9.0"

# Planning Center integration
reqwest = { version = "0.11.20", features = ["json"] }
oauth2 = "4.4.2"
async-trait = "0.1.73"
futures = "0.3"

# Async
tokio = { version = "1.36.0", features = ["full"] }

# Serialization
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
base64 = "0.13.0"  # For encoding binary data in JSON

# Date & time
chrono = "0.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0.80"

# Logging
tracing = "0.1.37"
dotenv = "0.15.0"

# Common utilities
fs-err = "2.9.0"
fuzzy-matcher = "0.3"
walkdir = "2.4"
shellexpand = "3.1.0"
unicode-width = "0.1.11"
flate2 = "1.0"
zip = { version = "0.6", default-features = false, features = ["deflate"] }

# Additional dependencies
dirs = "5.0"
rayon = "1.10.0"

[dev-dependencies]
tempfile = "3.10"

[features]
default = []
integration_test = []
